samples/_failures_safe/1761002322_da71e2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91171130.c: In function ‘bfs_shortest_path’:
./samples/SAFE/__tmp_91171130.c:166:9: error: expected ‘,’ or ‘;’ at end of input
  166 |         for (int i = 0
      |         ^~~
./samples/SAFE/__tmp_91171130.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_91171130.c:166:9: error: expected declaration or statement at end of input
